# markdone

./: README.md  pyproject.toml
src/markdone/: __init__.py  __main__.py
